k8s/base/platform/traefik/traefik-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  # Must be in the same namespace as the Traefik pod for now
  # Traefik is both the controller and the router, no reason to seperate them
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      protocol: HTTP
      port: 80 # This is the port 'web' in Traefik's pod
      allowedRoutes:
        namespaces:
          from: All # Allow Routes from 'default' namespace to use this Gateway
